syntax = "proto3";
package v1;
option go_package = "filter-core/api/v1";

import "google/api/annotations.proto";

service Conn {
  rpc AddLiveRoomDanmu(AddLiveRoomDanmuReq) returns (AddLiveRoomDanmuResp) {
    option (google.api.http) = {
      post: "/api/v1/conn/add_live_room_danmu",
      body: "*",
    };
  };
  rpc DelLiveRoomDanmu(DelLiveRoomDanmuReq) returns (DelLiveRoomDanmuResp) {
    option (google.api.http) = {
      post: "/api/v1/conn/del_live_room_danmu",
      body: "*",
    };
  };
  rpc EnableLiveRoomDanmu(EnableLiveRoomDanmuReq) returns (EnableLiveRoomDanmuResp) {
    option (google.api.http) = {
      post: "/api/v1/conn/enable_live_room_danmu",
      body: "*",
    };
  };
  rpc DisableLiveRoomDanmu(DisableLiveRoomDanmuReq) returns (DisableLiveRoomDanmuResp) {
    option (google.api.http) = {
      post: "/api/v1/conn/disable_live_room_danmu",
      body: "*",
    };
  };
}

message AddLiveRoomDanmuReq {
  int64 room_id = 1 [json_name = "room_id"];
}

message AddLiveRoomDanmuResp {
}

message DelLiveRoomDanmuReq {
  int64 room_id = 1 [json_name = "room_id"];
}

message DelLiveRoomDanmuResp {
}

message EnableLiveRoomDanmuReq {
  int64 room_id = 1 [json_name = "room_id"];
}

message EnableLiveRoomDanmuResp {
}

message DisableLiveRoomDanmuReq {
  int64 room_id = 1 [json_name = "room_id"];
}

message DisableLiveRoomDanmuResp {
}